objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Discount_Setup__c</fullName>
        <inlineHelpText>on the product: setup fee = true, list price2 &gt; 0, Discount Amount &lt; 0</inlineHelpText>
        <label>Discount Setup</label>
        <summarizedField>OpportunityLineItem.Discount_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Setup_Fee__c</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.List_Price_Formula__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Discount_Amount__c</field>
            <operation>lessThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Discount_Subscription__c</fullName>
        <inlineHelpText>on the product: List Price2 &gt; 0, Discount Amount not = 0, setup fee = false, one time fee = false, hardware product = false</inlineHelpText>
        <label>Discount Recurring</label>
        <summarizedField>OpportunityLineItem.Discount_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.List_Price_Formula__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Discount_Amount__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Setup_Fee__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.One_Time_Fee__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Hardware_Product__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>District</label>
        <referenceTo>District__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>The end date for the associated Contract.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exclude_EL_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>updated manually to include in the Daily MD Report</inlineHelpText>
        <label>Exclude EL Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Floor_Target_Monthly__c</fullName>
        <label>Floor Target Monthly</label>
        <summarizedField>OpportunityLineItem.Floor__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Setup_Fee__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.One_Time_Fee__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Hardware_Product__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Floor_Target_Non_Monthly__c</fullName>
        <label>Floor Target Non-Monthly</label>
        <summarizedField>OpportunityLineItem.Floor__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Family_Workflow__c</field>
            <operation>notEqual</operation>
            <value>Monthly Reoccuring</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Formula_Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freight_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Updated when the Generate Invoice is hit.</description>
        <inlineHelpText>Updated when the Generate Invoice is hit.</inlineHelpText>
        <label>Freight Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Fees__c</fullName>
        <inlineHelpText>on the product: Fulfillment = True then Total the VS Sale Price</inlineHelpText>
        <label>Fulfillment Fees</label>
        <summarizedField>OpportunityLineItem.VS_Sale_Price__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Fulfillment__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Timeline__c</fullName>
        <inlineHelpText>Rush requires approval from Keith P.</inlineHelpText>
        <label>Fulfillment Timeline</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
                <color>#419249</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Rush</fullName>
                <color>#A53711</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GL_MRR__c</fullName>
        <label>GL MRR</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_NameWF__c</field>
            <operation>startsWith</operation>
            <value>Auction Genius, kelley blue book price advisor</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Goal_Date_del__c</fullName>
        <description>Launch goal date</description>
        <inlineHelpText>Launch goal date</inlineHelpText>
        <label>Goal Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Grouping__c</fullName>
        <formula>CASE( Opportunity_Names__c , 
&quot;Add On&quot;, &quot;Stand Alone / Other&quot;,
&quot;Advanced Inventory&quot;,&quot;Inventory&quot;,
&quot;Advanced Inventory with MPT&quot;,&quot;Inventory&quot;,
&quot;CRM&quot;,&quot;Full Package&quot;, 
&quot;CRM Plus Desking&quot;,&quot;Full Package&quot;,
&quot;CRM Plus MPT&quot;,&quot;Full Package&quot;,
&quot;CRM Premier&quot;,&quot;Full Package&quot;,
&quot;CRM Pro&quot;,&quot;Full Package&quot;,
&quot;Digital Marketing Package&quot;,&quot;Marketing Campaigns&quot;,
&quot;Fulfillment&quot;,&quot;Marketing Campaigns&quot;,
&quot;Fulfillment Coop&quot;,&quot;Marketing Campaigns&quot;,
&quot;Hardware&quot;,&quot;Stand Alone / Other&quot;, 
&quot;Haystak DM&quot;,&quot;Marketing Campaigns&quot;,
&quot;ILM&quot;,&quot;Silver - ILM&quot;,
&quot;ILM with MPT&quot;,&quot;Silver - ILM&quot;,
&quot;OEM Website&quot;,&quot;Website&quot;,
&quot;Printed Materials&quot;,&quot;Marketing Campaigns&quot;,
&quot;Product Swap&quot;,&quot;Other&quot;,
&quot;Training&quot;,&quot;Stand Alone / Other&quot;, 
&quot;Website&quot;,&quot;Website&quot;,
&quot;Website - Kore 360&quot;,&quot;Website&quot;,
&quot;Website - Vin Advanced&quot;, &quot;Website&quot;,
&quot;Unknown&quot;)</formula>
        <inlineHelpText>formula field that converts the Opportunity Type to a Group code established by the Finance Manager</inlineHelpText>
        <label>Grouping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hardware_Fees__c</fullName>
        <inlineHelpText>on the product: Hardware Product = True, then Sum the Total Price</inlineHelpText>
        <label>Hardware Fees</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Hardware_Product__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Harvest__c</fullName>
        <inlineHelpText>Required to Close New Business</inlineHelpText>
        <label>Harvest?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Dealer_com_Website__c</fullName>
        <description>Does this dealer have a Dealer.com website?</description>
        <inlineHelpText>Does this dealer have a Dealer.com website?</inlineHelpText>
        <label>Has Dealer.com Website</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Website_Product__c</fullName>
        <description>Created to replace &quot;Includes Website Product&quot;, a field updated by triggers. This field is maintained by a rollup and this formula.</description>
        <formula>IF(
   Number_of_Website_Products__c &gt; 0,
   TRUE,
   FALSE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Website Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Haystak_Campaign_Types__c</fullName>
        <inlineHelpText>used to hold sugar crm data, all future opps will use product related list to show campaigns</inlineHelpText>
        <label>Haystak Campaign Types</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Haystak_Monthly_Management_Fee__c</fullName>
        <inlineHelpText>legacy sugar crm data, not editable</inlineHelpText>
        <label>Haystak Monthly Management Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Haystak_Opportunity_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created to show Haystak Opportunites as related list on Account Page</description>
        <label>Haystak Opportunity Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Haystak Opportunities</relationshipLabel>
        <relationshipName>HaystakOpportunites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Haystak_Technology_Fee__c</fullName>
        <inlineHelpText>legacy date from sugar crm, you can edit this field</inlineHelpText>
        <label>Haystak Technology Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IDOPP__c</fullName>
        <formula>OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IDOPP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ILM_Vendor__c</fullName>
        <inlineHelpText>Who is the Dealer&apos;s Current ILM Vendor?</inlineHelpText>
        <label>ILM Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>AAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aeros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction 123</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoAccelerator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoBase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoBytel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoConX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Jini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Jockey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Mate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoOne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Revo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoSoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Soft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autostar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Tracker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autotrader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Uplink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buzz Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Implementation_Contact_ID__c</fullName>
        <formula>Implementation_Contact__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>look up the contact under the Salesforce account that Implementation will contact regarding the setup of the products purchased</inlineHelpText>
        <label>Implementation Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Business_Unit__c</field>
                <operation>equals</operation>
                <valueField>$User.Business_Unit_for_Contact_Filter__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Implementation Contact)</relationshipLabel>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Manager__c</fullName>
        <label>Implementation Manager</label>
        <picklist>
            <picklistValues>
                <fullName>Matt Bench</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travis Douglas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jennifer Merrick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kandy Richert</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inactive_Product_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to override the disabling of marking an opportunity Closed Won that has inactive products on it.</description>
        <inlineHelpText>Managers Override to mark opportunity Closed Won with inactive products in the product list.</inlineHelpText>
        <label>Inactive Product Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Includes_Website_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>updated by a trigger</inlineHelpText>
        <label>Includes Website Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Load__c</fullName>
        <description>For Tier 1/Tier 2/OEM opps. For products that are Subject to Load, only THIS amount of project pieces will be generated when the opp is marked Closed Won.</description>
        <inlineHelpText>For products that are Subject to Load, only THIS amount of project pieces will be generated when the opp is marked Closed Won.</inlineHelpText>
        <label>Initial Load</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Webex_Completed__c</fullName>
        <inlineHelpText>Date Field updated by a trigger when the initial demo event is updated to completed</inlineHelpText>
        <label>Initial Demo Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InstallmentRemainder__c</fullName>
        <formula>Invoice_Total3__c - Total_Installment_Amounts_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InstallmentRemainder</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InstallmentsGenerated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InstallmentsGenerated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inventory_Vendor__c</fullName>
        <inlineHelpText>Who is the dealer&apos;s current Inventory Vendor?</inlineHelpText>
        <label>Inventory Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>AAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aeros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction 123</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoAccelerator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoBase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoBytel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoConX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Jini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Jockey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Mate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoOne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Revo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoSoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Soft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autostar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Tracker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autotrader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Uplink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buzz Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoice_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when an invoice is generated so that we can make sure nothing gets paid without an invoice being created.</description>
        <label>Invoice Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Total2__c</fullName>
        <formula>Amount  +   Freight_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Total2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Total3__c</fullName>
        <formula>Amount + Freight_Cost__c + TNOPPST__Sales_Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Includes Sales Tax</inlineHelpText>
        <label>Invoice Total w/ Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total of invoice generated when Generate Invoice button is hit.</inlineHelpText>
        <label>Invoice Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IsFromLead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to track Opps created from converted Leads.</description>
        <label>IsFromLead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Buyout__c</fullName>
        <label>Is Buyout?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Contract__c</fullName>
        <inlineHelpText>Update this if the customer agreed to a specific contract term, ie: 6, 12 or 24 months, etc</inlineHelpText>
        <label>Is Contract</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Preview__c</fullName>
        <label>Last Activity Preview</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Completed_Webex_Date__c</fullName>
        <inlineHelpText>updated by the system when a Demo Event is updated to completed - uses the webex start date as the last completed Demo date</inlineHelpText>
        <label>Last Completed Demo Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Proposal_Sent__c</fullName>
        <description>Most recent date of the last proposal sent.</description>
        <label>Latest Proposal Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <description>Legacy ObjectID for Migration Purposes</description>
        <label>Legacy_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_LastModifiedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for the vAuto import, as we cannot update the Last Modified By field after import.</description>
        <inlineHelpText>Used for the vAuto import, as we cannot update the Last Modified By field after import.</inlineHelpText>
        <label>Legacy Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_LastModifiedDate__c</fullName>
        <description>Used for the vAuto import, as we cannot update the Last Modified Date field after import.</description>
        <inlineHelpText>Used for the vAuto import, as we cannot update the Last Modified Date field after import.</inlineHelpText>
        <label>Legacy Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Stage__c</fullName>
        <label>Legacy Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Load_Counter__c</fullName>
        <description>For Tier 1/Tier 2/OEM opps only. Keeps track of the amount of project pieces generated so far on this opp.</description>
        <inlineHelpText>Keeps track of the amount of project pieces generated so far on this opp.</inlineHelpText>
        <label>Load Counter</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMR_Paid__c</fullName>
        <formula>IF( PAID_decoy__c =&quot;Yes&quot;,  Monthly_Recurring_Fees__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MMR Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MRR_converted__c</fullName>
        <formula>IF(
   Price_Book_Used__c = &quot;Vin Canada&quot;,
   Monthly_Recurring_Fees__c * CAD_Conversion_Rate__c,
   Monthly_Recurring_Fees__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MRR converted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mailer_Notes__c</fullName>
        <description>Any general notes regarding this mailer</description>
        <label>Mailer Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <picklist>
            <picklistValues>
                <fullName>Acura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aston Martin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bently</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bugatti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daewoo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daihatsu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge/Ram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isuzu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaguar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lamborghini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land Rover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lincoln</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lotus</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Media_Portfilo_Specialist__c</fullName>
        <label>Media Portfilo Specialist</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Website_2__c</fullName>
        <description>Haystak</description>
        <inlineHelpText>Where traffic will be directed to</inlineHelpText>
        <label>Mobile Website 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Mobile_Website_3__c</fullName>
        <description>Haystak</description>
        <inlineHelpText>Where traffic will be directed to</inlineHelpText>
        <label>Mobile Website 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Mobile_Website__c</fullName>
        <description>Haystak</description>
        <inlineHelpText>Where traffic will be directed to</inlineHelpText>
        <label>Mobile Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Monthly_Advertising_Budget__c</fullName>
        <label>Monthly Advertising Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Recurring_Fees_Converted__c</fullName>
        <formula>IF( 
Price_Book_Used__c = &quot;Vin Canada&quot;, 
Monthly_Recurring_Fees__c * CAD_Conversion_Rate__c, 
Monthly_Recurring_Fees__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Recurring Fees (Converted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>